--- a/实验/1-3 练习题.md
+++ b/实验/1-3 练习题.md
@@ -42,7 +42,9 @@
 
 
 
-命令
+
+
+### 1. 创建数据库company		
 
 ```mysql
 #创建库
@@ -59,6 +61,14 @@ address VARCHAR(50),
 country VARCHAR(50),
 postalCode VARCHAR(25),constraint uni_postalCode unique (postalCode));
 
+
+    
+
+```
+
+### 2、创建表offices和employee	
+
+```mysql
 #创建表2
 create table employees (
      employeesNumber INT(11) primary key auto_increment,
@@ -73,7 +83,60 @@ create table employees (
     constraint uni_mobile unique (mobile),
     constraint uni_lastName unique (lastName),
     constraint fk_ex7 foreign key (officeCode) references offices(officeCode));
-    
+```
 
+### 3、将employee的mobile字段修改到officeCode字段后面	
+
+```mysql
+alter table employees modify mobile VARCHAR(25) after officeCode;
+```
+
+4、将表employee的birth字段改名为employee_birth	
+
+```mysql
+alter table employees change birth employee_birth DATETIME
+```
+
+5、修改sex字段，数据类型为CHAR(1)，非空约束		
+
+```mysql
+alter table employees modify sex CHAR(1) not null;
+```
+
+6、删除字段note	
+
+```mysql
+alter table employees drop note;
+```
+
+7、添加字段名favorite_activity，数据类型为VARCHAR(100)		
+
+```mysql
+alter table employees add favorite_activity VARCHAR(100);
+```
+
+8、删除表offices	
+
+```mysql
+#查询外键约束
+show create table employees\G
+
+#先删除外键约束（employees）
+alter table employees drop foreign key fk_ex7;
+
+
+drop table offices;
+```
+
+9、修改表employee存储引擎为MyISAM	
+
+```mysql
+alter table employees engint=MyISAM;
+```
+
+10、讲标employee名称修改为employee_info	
+
+```mysql
+alter table employees rename employess_info;
 ```
 
