--- a/3. mysql 第三天 修改表，删除约束.md
+++ b/3. mysql 第三天 修改表，删除约束.md
@@ -266,6 +266,14 @@ Create Table: CREATE TABLE `score` (
 
 ### 12删除外键约束关系
 
+#### 查看表外键约束名称的方法
+
+```
+show create table score\G
+```
+
+
+
 ```python
 alter table 表名 drop foreign key 约束名称
 ```
