--- a/1. mysql第一天 数据库认知 存储引擎.md
+++ b/1. mysql第一天 数据库认知 存储引擎.md
@@ -23,7 +23,7 @@ mysql是一个开放源代码的数据库管理系统（DBMS）
 
 mysql被oracle收购了，是一个跨平台的数据库
 
-```
+```mysql
 	数据库是由一批数据构成的有序的集合，这些数据被存放在结构化的数据表里。 数据表之间互相关联，反应了客观事物间的本质练习。 数据库系统，提供对数据的安全控制和完整性控制。
 	(数据库就是容器，用于持久化存储数据)
 	(库是存放数据的地方，表是存储在库中指定的地方)
@@ -69,7 +69,7 @@ mysql 8.0之前 只是一个关系型数据库（sql)
 
 ### 1. 关于数据表
 
-```
+```mysql
 	在关系数据库中，数据库的表是一系列二维数组的集合，用来存储数据和操作数据的逻辑结构。 它是由纵向的列和横向的行组成，行被称为记录，是组织数据的单位；列被称为字段，每一列表示记录的一个属性，都有相应的描述信息
 ```
 
@@ -199,7 +199,7 @@ mysql是一个小型数据库管理系统，与其他大型数据库股那里系
 
 
 
-#### 3. 关于客户端和服务段
+#### 3. 关于客户端和服务端
 
 ```mysql
 systemctl restart mysqld    #启动的是服务端
@@ -228,12 +228,12 @@ select version();
 #### 6 mysql的优势
 
 ```mysql
-1.速度快  (相对于大型的数据库(sql server oracle等)来说启动快)
-2.免费    
+1. 速度快  (相对于大型的数据库(sql server oracle等)来说启动快)
+2. 免费    
 3. 操作简单，使用容易
 4. 移植性强(跨平台)
 5. 接口丰富(当前所有的主流语言都可以于mysql沟通，拥有API接口)
-6.安全性和连续性
+6. 安全性和连续性
 
 
 安全性
