--- a/4. 数据类型 （整数+浮点).md
+++ b/4. 数据类型 （整数+浮点).md
@@ -1,14 +1,14 @@
-## 数据类型
 
 
+## #数据类型
 
 ```
 	数据类型是数据写入的格式，每个字段有且仅有一个数据类型与其对应。 不同的数据类型在存储数据的时候格式也是不一样的
 ```
 
-### #数据类型
 
-#### 1.整数类型
+
+## 1. 整数类型
 
 ```mysql
              说明                存储需求             有符号取值范围
@@ -30,10 +30,6 @@ bigint    #较大整数类型             8字节              -9223372036854775
 ......
 
 
-
-
-
-
 #无符号取值范围
 1. 0~255              2^8=255 ...   tinyint
 2. 0~65536                            smallint
@@ -41,20 +37,18 @@ bigint    #较大整数类型             8字节              -9223372036854775
 4. 0~4294967295                        int
 5. 0~18446744973709551615            bigint
 
-
-
-
+#在数值类数据类型种默认有符号的取值范围，如果想要写入无符号的取值范围(优化资源浪费)
 ```
 
-##### #在数值类数据类型种默认有符号的取值范围，如果想要写入无符号的取值范围(优化资源浪费)
+##### 
 
-使用方法
+### 使用方法
 
-```
+```mysql
 字段名 数值类数据类型 unsigned
 ```
 
-案例
+##### 案例
 
 ```mysql
 #创建一个表
@@ -69,7 +63,7 @@ insert into text(255);         #这样允许插入的数据范围是0-255 因为
 #我们要合理的根据资料的使用情况来选择数据类型
 ```
 
-案例2
+##### 案例2
 
 ```mysql
 #创建所有整数类型
@@ -80,11 +74,25 @@ create table test1(
 	m int,
 	n bigint);
 
+#来看看他们默认占的是多少
+mysql> desc test1;
++-------+--------------+------+-----+---------+-------+
+| Field | Type         | Null | Key | Default | Extra |
++-------+--------------+------+-----+---------+-------+
+| x     | tinyint(4)   | YES  |     | NULL    |       |
+| y     | smallint(6)  | YES  |     | NULL    |       |
+| z     | mediumint(9) | YES  |     | NULL    |       |
+| m     | int(11)      | YES  |     | NULL    |       |
+| n     | bigint(20)   | YES  |     | NULL    |       |
++-------+--------------+------+-----+---------+-------+
+5 rows in set (0.00 sec)
+
+
 ```
 
 
 
-#### 2.浮点类型（小数）
+## 2.浮点类型（小数）
 
 ```mysql
 	# m作为精度，表示一共能存放的数值的位数，n表示标度，代表保留的小数位数，浮点数进行保存数据时，使用的正常的数值来保存，而decimal使用的字符串形式保存数据，准确度较浮点数而言较高一些通常用于货币计算，科学计算，浮点数较于定点数而言虽然不精确但是取值范围较广，适合用于范围大，而不需要特别准确的数据
@@ -99,7 +107,7 @@ create table test1(
 
 ```
 
-案例
+#### 案例
 
 ```mysql
 create table test2( x float(5,2), y double(5,2), z decimal(5,2));  #使用了浮点数和定点数
@@ -114,9 +122,11 @@ insert into test2 value(5.155,5.123,5.2345);
 +------+------+------+
 1 row in set (0.00 sec)
 
+
+
 #使用浮点数时，进行四舍五入，浮点数是不提示的 ，定点数四舍五入时会报warning提升您四舍五入了
 
-show warnings;
+mysql> show warnings;
 +-------+------+----------------------------------------+
 | Level | Code | Message                                |
 +-------+------+----------------------------------------+
@@ -125,21 +135,29 @@ show warnings;
 #提示您定点数值的被四舍五入了
 ```
 
-案例2
+#### 案例2
 
-```
-drop table test2;
+```mysql
+drop table test2;             #删除之前的表
+
 create table test2(x decimal(3,1));
-insert into test2 values(100,99);
 
-insert into test2 values(1.1);
+#我们首先去尝试一下
+insert into test2 values(100,99);     #发现会报错，因为它的值超出了我们设置decimal的位数，
+								   #decimal(3,1) 说明总体位数为3位，小数点后最多为1位
+								   #所以不允许出现100.1这种数字 只能允许99.1这类的，
+								   #如果输入整数，它会默认帮你补个0，不会出现超出3位的数
+								   #如100.0 这种就是4位了
+								   
+								   #如下
+insert into test2 values(11.1);
 insert into test2 values(99.9);       #最大，3位是包含小数点的，有小数点时，前面最多两位，小数点最多1位
 
 ```
 
 
 
-#### 3 #数据类数据类型
+## 3 #数据类数据类型
 
 ```mysql
 #可以使用多种日期记录的方式记录数据，比如说年月日，每个日期类数据类型都有一个合法的取值范围
@@ -158,7 +176,7 @@ timestamp       yyyy-mm-dd hh:mm:ss  4字节
                                          #utc 世界标准世界
 ```
 
-##### 1 year
+### 1 year
 
 ```mysql
 create table test3(y year);
@@ -210,75 +228,9 @@ select * from test3;
 
 
 
-##### 2.#清除表数据的方法
-
-```mysql
-delete from 表名 [where];          #（可以判断删除指定信息，但会遗留空间碎片）
-或
-truncate table 表名;       #（只能强制删除表中所有数据，释放空间）
- 
-#区别： 
-
-	#使用truncate table 在功能的使用上和delete相同，但是truncate只能清空所有的表数据，但是delete后可以使用where条件判断进行删除指定的部分数据。 
-
-	#truncate 操作过后的表速度要比delete操作的表速度快，delete会产生空间碎片，而truncate则不会，因为truncate删除的同时将会释放表空间，而delete不释放，truncate占用系统和事务日志资源较少
-```
-
-###### 1. 使用delete 表数据
-
-```mysql
-create table test4(id int primary key auto_increment,name varchar(30));
-insert into test4 (name) values('1');
-insert into test4 (name) values('1');
-insert into test4 (name) values('1');
-
-#当表数据被清空时，使用truncate清空的表，索引和自增值都将恢复成初始大小，而delete不会
 
 
-#查看
-select * from test4;
-
-+----+------+
-| id | name |
-+----+------+
-|  1 | 1    |
-|  2 | 1    |
-|  3 | 1    |
-
-#使用delete删除
-delete from test4 ;
-#再次插入数据
-insert into test4 (name) values('1');
-
-select * from test4;
-+----+------+
-| id | name |
-+----+------+
-|  4 | 1    |
-+----+------+
-#自增id还是根据碎片的id来继续递增的
-```
-
-######  2.使用truncate 删除表数据
-
-```mysql
-truncate table test4;
-
-#再次插入数据
-insert into test4 (name) values('1');
-
-select * from test4;
-+----+------+
-| id | name |
-+----+------+
-|  1 | 1    |
-+----+------+
-#则没有碎片
-```
-
-
-
-##### 3.time 
+## 3.time 
 
 time写入规则
 
@@ -351,7 +303,7 @@ insert into test5 values (current_time),(now());
 
 
 
-##### 4 date
+## 4 date
 
 ```mysql
 数据写入规则
@@ -417,7 +369,7 @@ select * from test6;
 
 ```
 
-##### 5.datetime （年月日，时分秒）
+## 5.datetime （年月日，时分秒）
 
 ```mysql
 数据写入规则
@@ -474,7 +426,7 @@ select utc_time();
 
 
 
-##### 6.timestamp
+## 6.timestamp
 
 ```mysql
 写入规则
@@ -507,5 +459,75 @@ select * from test8;
 
 
 
-#### 
+
+
+
+
+## #清除表数据的方法
+
+```mysql
+delete from 表名 [where];          #（可以判断删除指定信息，但会遗留空间碎片）
+或
+truncate table 表名;       #（只能强制删除表中所有数据，释放空间）
+ 
+#区别： 
+
+	#使用truncate table 在功能的使用上和delete相同，但是truncate只能清空所有的表数据，但是delete后可以使用where条件判断进行删除指定的部分数据。 
+
+	#truncate 操作过后的表速度要比delete操作的表速度快，delete会产生空间碎片，而truncate则不会，因为truncate删除的同时将会释放表空间，而delete不释放，truncate占用系统和事务日志资源较少
+```
+
+### 1. 使用delete 表数据
+
+```mysql
+create table test4(id int primary key auto_increment,name varchar(30));
+insert into test4 (name) values('1');
+insert into test4 (name) values('1');
+insert into test4 (name) values('1');
+
+#当表数据被清空时，使用truncate清空的表，索引和自增值都将恢复成初始大小，而delete不会
+
+
+#查看
+select * from test4;
+
++----+------+
+| id | name |
++----+------+
+|  1 | 1    |
+|  2 | 1    |
+|  3 | 1    |
+
+#使用delete删除
+delete from test4 ;
+#再次插入数据
+insert into test4 (name) values('1');
+
+select * from test4;
++----+------+
+| id | name |
++----+------+
+|  4 | 1    |
++----+------+
+#自增id还是根据碎片的id来继续递增的
+```
+
+###  2.使用truncate 删除表数据
+
+```mysql
+truncate table test4;
+
+#再次插入数据
+insert into test4 (name) values('1');
+
+select * from test4;
++----+------+
+| id | name |
++----+------+
+|  1 | 1    |
++----+------+
+#则没有碎片
+```
+
+
 
