--- a/7. 查询（排序，分组,聚合）.md
+++ b/7. 查询（排序，分组,聚合）.md
@@ -466,7 +466,7 @@ mysql> select * from fruits  order by f_price desc,f_name;
 
 
 
-### 分组
+## 分组
 
 ```mysql
 #格式
@@ -684,7 +684,21 @@ mysql> select * from fruits  order by f_price desc,f_name limit 1;
 | m2   |  105 |   33.70 | duiian |
 +------+------+---------+--------+
 1 row in set (0.00 sec)
+```
 
 
+
+### 聚合函数sum
+
+
+
+
+
+聚合函数平均值
+
+```mysql
+#求每个供应商提供的水果的平均价格
+
+select s_id,avg(f_price) from fruits  order by f_price;
 ```
 
