--- a/实验/1-3 练习题.md
+++ b/实验/1-3 练习题.md
@@ -11,7 +11,7 @@
 
 
 
-表2
+表2 （employees）
 
 | 字段名          | 数据类型     | 主键 | 外键 | 非空 | 唯一 | 自增 |
 | --------------- | ------------ | ---- | ---- | ---- | ---- | ---- |
@@ -19,7 +19,7 @@
 | lastName        | VARCHAR(50)  | 否   | 否   | 是   | 否   | 否   |
 | firstName       | VARCHAR(50)  | 否   | 否   | 是   | 否   | 否   |
 | mobile          | VARCHAR(25)  | 否   | 否   | 否   | 是   | 否   |
-| officeCode      | VARCHAR(10)  | 否   | 是   | 是   | 否   | 否   |
+| officeCode      | int(10)      | 否   | 是   | 是   | 否   | 否   |
 | jobTitle        | VARCHAR(50)  | 否   | 否   | 是   | 否   | 否   |
 | birth           | DATETIME     | 否   | 否   | 是   | 否   | 否   |
 | note            | VARCHAR(255) | 否   | 否   | 否   | 否   | 否   |
@@ -59,14 +59,12 @@ officeCode INT(10) primary key,
 city INT(11) not null,
 address VARCHAR(50),
 country VARCHAR(50),
-postalCode VARCHAR(25),constraint uni_postalCode unique (postalCode));
-
-
-    
+postalCode VARCHAR(25),
+constraint uni_postalCode unique (postalCode));
 
 ```
 
-### 2、创建表offices和employee	
+### 2、创建表offices和employees
 
 ```mysql
 #创建表2
@@ -81,17 +79,17 @@ create table employees (
     note VARCHAR(255),
     sex VARCHAR(5),
     constraint uni_mobile unique (mobile),
-    constraint uni_lastName unique (lastName),
     constraint fk_ex7 foreign key (officeCode) references offices(officeCode));
+
 ```
 
-### 3、将employee的mobile字段修改到officeCode字段后面	
+### 3、将employees的mobile字段修改到officeCode字段后面	
 
 ```mysql
 alter table employees modify mobile VARCHAR(25) after officeCode;
 ```
 
-4、将表employee的birth字段改名为employee_birth	
+4、将表employees的birth字段改名为employee_birth	
 
 ```mysql
 alter table employees change birth employee_birth DATETIME
@@ -119,6 +117,7 @@ alter table employees add favorite_activity VARCHAR(100);
 
 ```mysql
 #查询外键约束
+#查询创建表的约束
 show create table employees\G
 
 #先删除外键约束（employees）
@@ -138,5 +137,32 @@ alter table employees engint=MyISAM;
 
 ```mysql
 alter table employees rename employess_info;
+```
+
+
+
+总结用到的语法
+
+```mysql
+主键
+primary key 
+自增
+auto_increment
+
+外键
+constraint 外键约束名称 foreign key(本表字段) references 表1(表字段名)
+
+#xiug
+modify ---- after ;   #after的作用，修改字段位置，再什么字段之后
+	#用于修改字段所在位置
+	#用于修改字段的数据类型
+	
+
+
+change  修改字段名
+add  添加新的字段
+rename  修改表的名称名
+
+
 ```
 
