--- a/实验/4.2 章练习.md
+++ b/实验/4.2 章练习.md
@@ -67,12 +67,12 @@ create table student(
 	
 #teacher（老师）
 create table teacher(
-    -> t_id int(11) primary key not null,
-    -> t_name varchar(20) not null,
-    -> t_sex char(2) not null,
-    -> t_birthday date ,
-    -> t_prof char(10),
-    -> t_depart varchar(20) not null);
+    t_id int(11) primary key not null,
+    t_name varchar(20) not null,
+    t_sex char(2) not null,
+    t_birthday date ,
+    t_prof char(10),
+    t_depart varchar(20) not null);
 
 #course（课程）
 create table course ( c_no varchar(20) primary key not null,
